--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ h4 {
 font-family: 'pp_woodlandultralight', serif;
 font-weight: 700;
 font-style: normal;
-font-size: 3vmax;
+font-size: 2.6rem;
 font-weight:700;
 letter-spacing: 2px;
 margin-top:3vmax;
